--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "nodemon": "^3.0.1",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
